--- a/html/cart.html
+++ b/html/cart.html
@@ -34,7 +34,7 @@
         <!--Sticky navbar only with navbrand (centered)-->
         <nav class="navbar bg-dark navbar-dark sticky-top">
             <div class="container">
-                <a href="/html/index.html" class="navbar-brand mx-auto lead">Foodigo</a>
+                <a href="/index.html" class="navbar-brand mx-auto lead">Foodigo</a>
             </div>
         </nav>
         <h1 style="text-align: center;" class="pt-5">Your Cart</h1>
