--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="card text-center text-dark bg-white ">
-                        <img src="/img/ailes pictures/v&f.jpg" alt="" class="card-img-top">
+                        <a href="/html/ailes/fruits&vegetables.html"><img src="/img/ailes pictures/v&f.jpg" alt="" class="card-img-top"></a>
                         <div class="card-body">
                             <h3 class="card-title display-5">Fruits & Vegetables</h3>
                                 <a href="/html/ailes/fruits&vegetables.html"><button class="buttonshad buttonstyling bg-primary text-light mx-5">Shop</button></a>
@@ -69,16 +69,16 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="card text-center text-dark bg-white">
-                        <img src="/img/ailes pictures/Meat.jpg" alt="" class="card-img-top">
+                        <a href="/html/ailes/meat.html"><img src="/img/ailes pictures/Meat.jpg" alt="" class="card-img-top"></a>
                         <div class="card-body">
-                            <h3 class="card-title display-5">Meat</h3>
+                                <h3 class="card-title display-5">Meat</h3>
                                 <a href="/html/ailes/meat.html"><button class="buttonshad buttonstyling bg-primary text-light mx-5">Shop</button></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="card text-center text-dark bg-white">
-                        <img src="/img/ailes pictures/Eggs&dairy.jpg" alt="" class="card-img-top">
+                        <a href="/html/ailes/dairy&eggs.html"><img src="/img/ailes pictures/Eggs&dairy.jpg" alt="" class="card-img-top"></a>
                         <div class="card-body">
                             <h3 class="card-title display-5">Dairy & Eggs</h3>
                                 <a href="/html/ailes/dairy&eggs.html"><button class="buttonshad buttonstyling bg-primary text-light mx-5">Shop</button></a>
@@ -91,7 +91,7 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="card text-center text-dark bg-white">
-                        <img src="/img/ailes pictures/snacks.jpg" alt="" class="card-img-top">
+                        <a href="/html/ailes/snacks.html"><img src="/img/ailes pictures/snacks.jpg" alt="" class="card-img-top"></a>
                         <div class="card-body">
                             <h3 class="card-title display-5">Snacks</h3>
                                 <a href="/html/ailes/snacks.html"><button class="buttonshad buttonstyling bg-primary text-light mx-5">Shop</button></a>
@@ -100,7 +100,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="card text-center text-dark bg-white">
-                        <img src="/img/ailes pictures/drinks.jpg" alt="" class="card-img-top">
+                        <a href="/html/ailes/drinks.html"><img src="/img/ailes pictures/drinks.jpg" alt="" class="card-img-top"></a>
                         <div class="card-body">
                             <h3 class="card-title display-5">Drinks</h3>
                                 <a href="/html/ailes/Drinks.html"><button class="buttonshad buttonstyling bg-primary text-light mx-5">Shop</button></a>
@@ -109,7 +109,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="card text-center text-dark bg-white">
-                        <img src="/img/ailes pictures/bakery.jpg" alt="" class="card-img-top">
+                        <a href="/html/ailes/bakery.html"><img src="/img/ailes pictures/bakery.jpg" alt="" class="card-img-top"></a>
                         <div class="card-body">
                             <h3 class="card-title display-5">Bakery</h3>
                                 <a href="/html/ailes/bakery.html"><button class="buttonshad buttonstyling bg-primary text-light mx-5">Shop</button></a>
