--- a/html/Products/Fruits:vegetable/apples.html
+++ b/html/Products/Fruits:vegetable/apples.html
@@ -45,7 +45,7 @@
                             <a href="/html/ailes/dairy&eggs.html" class="nav-link lead">Dairy & Eggs</a>
                         </li>
                         <li class="nav-item px-4">
-                            <a href="/html/ailes/dairy&eggs.html" class="nav-link lead">Fruits & Vegetables</a>
+                            <a href="/html/ailes/fruits&vegetables.html" class="nav-link lead">Fruits & Vegetables</a>
                         </li>
                         <li class="nav-item px-4">
                             <a href="/html/ailes/snacks.html" class="nav-link lead">Snack</a>
@@ -70,20 +70,30 @@
               <div class="col-md-8">
                 <div class="card-body mx-5">
                   <h5 class="card-title h1 pl-5 mx-2 d-flex">Spartan apples</h5>
-                  <p class="card-text pl-5 mx-2 lead font-weight-bold d-flex">2.49$/lb</p>
+                  <!--GET PRICE FROM HERE-->
+                  <p class="card-text pl-5 mx-2 lead font-weight-bold d-flex"><span id="price">2.99</span>$/250g</p>
+                  <!--GET PRICE FROM HERE-->
                   <p class="card-text pl-5 mx-2 lead smal d-flex">Spartan</p>
                   <p class="card-text pl-5 mx-2 lead small d-flex">Product ID: 6001</p>
-                  <p class="card-text pl-5 mx-2 lead small d-flex">Weight: 453g</p>
+                  <p class="card-text pl-5 mx-2 lead small d-flex">Weight: 250g</p>
                   <div class="container d-flex alignmentcard">
                     <div class="d-flex mx-3">
-                        <div class="num-block skin">
-                            <div class="num-in">
-                              <span class="minus dis"></span>
-                              <input type="text" class="in-num" value="1" readonly="">
-                              <span class="plus"></span>
-                            </div>
+                        <!--QUANTITY BUTTONS START-->
+                        <div class="num-block skin-5">
+                            <div class="num-block skin-2 pt-2">
+                                <div class="num-in">
+                                  <span class="minus dis" id="decrease" onclick="decreaseValue()"></span>
+                                  <input type="text" id="qty" min="0" value="0"/
+                                  readonly>
+                                  <span class="plus" id="increase" onclick="increaseValue()"></span>
+                                </div>
+                              </div>
                           </div>
-                      <button class="buttonshad buttonstyling bg-primary text-light mx-5">Add</button>
+                          <!--QUANTITY BUTTONS END-->
+
+                          <!--ADD TO CART BUTTON-->
+                          <button class="rounded buttonshad buttonstyling bg-primary text-light mx-5">Add $<span id="totalprice">0.00</span></button>
+                          <!--ADD TO CART BUTTON-->
                     </div>      
                   </div>
                   <div class="container pt-4 px-5 mx-1">
@@ -97,7 +107,7 @@
               </div>
             </div>
           </div>
-          
+          <script src="./fruitsvege.js"></script>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
 </html>
