--- a/html/cart.html
+++ b/html/cart.html
@@ -55,17 +55,20 @@
                           <p class="lead fw-normal mb-2">Energy drink</p>
                         </div>
                         <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
+                          <!--Minus button-->
                           <button class="btn btn-link px-2">
-                            <h4><i class="bi bi-dash-circle-fill"></i></h4>
+                            <h4><i class="bi bi-dash-circle-fill minus"></i></h4>
                           </button>
-                          <input id="form1" min="0" name="quantity" value="2" type=""
-                            class="form-control form-control-sm" />
+                          <!--Minus button-->
+                          <input id="item1" value="1" readonly class="inputcart form-control form-control-sm"/>
+                          <!--Plus button-->
                           <button class="btn btn-link px-2">
-                            <h4><i class="bi bi-plus-circle-fill"></i></h4>
+                            <h4><i class="bi bi-plus-circle-fill plus"></i></h4>
                           </button>
+                          <!--Minus button-->
                         </div>
                         <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                          <h5 class="mb-0">$7.78</h5>
+                          <h5 class="mb-0">$<span id="price1">4</span></h5>
                         </div>
                         <div class="col-md-1 col-lg-1 col-xl-1 text-end">
                           <a href="#!" class="text-danger"><i class="bi bi-x-square-fill h3"></i></a>
@@ -85,17 +88,17 @@
                           <p class="lead fw-normal mb-2">Spartan Apple</p>
                         </div>
                         <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
-                          <button class="btn btn-link px-2">
+                          <button class="btn btn-link px-2 minus2">
                             <h4><i class="bi bi-dash-circle-fill"></i></h4>
                           </button>
-                          <input id="form1" min="0" name="quantity" value="2" type=""
-                            class="form-control form-control-sm" />
-                          <button class="btn btn-link px-2">
+                          <input id="item2" min="0" name="quantity" value="1" readonly
+                            class="inputcart form-control form-control-sm" />
+                          <button class="btn btn-link px-2 plus2">
                             <h4><i class="bi bi-plus-circle-fill"></i></h4>
                           </button>
                         </div>
                         <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                          <h5 class="mb-0">$4.98</h5>
+                          <h5 class="mb-0">$<span id="price2">3</span></h5>
                         </div>
                         <div class="col-md-1 col-lg-1 col-xl-1 text-end">
                           <a href="#!" class="text-danger"><i class="bi bi-x-square-fill h3"></i></a>
@@ -115,17 +118,17 @@
                           <p class="lead fw-normal mb-2">Eggs</p>
                         </div>
                         <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
-                          <button class="btn btn-link px-2">
+                          <button class="btn btn-link px-2 minus3">
                             <h4><i class="bi bi-dash-circle-fill"></i></h4>
                           </button>
-                          <input id="form1" min="0" name="quantity" value="2" type=""
-                            class="form-control form-control-sm" />
-                          <button class="btn btn-link px-2">
+                          <input id="item3" min="0" name="quantity" value="1" readonly
+                            class="inputcart form-control form-control-sm" />
+                          <button class="btn btn-link px-2 plus3">
                             <h4><i class="bi bi-plus-circle-fill"></i></h4>
                           </button>
                         </div>
                         <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                          <h5 class="mb-0">$6.78</h5>
+                          <h5 class="mb-0">$<span id="price3">4</span></h5>
                         </div>
                         <div class="col-md-1 col-lg-1 col-xl-1 text-end">
                           <a href="#!" class="text-danger"><i class="bi bi-x-square-fill h3"></i></a>
@@ -141,7 +144,7 @@
                       <h6>Number of Items</h6>
                     </div>
                     <div class="col-sm-4 p-0">
-                      <p>6</p>
+                      <p id="numberOfItem">3</p>
                     </div>
                   </div>
                   <div class="row m-0">
@@ -149,7 +152,7 @@
                       <h6>Subtotal</h6>
                     </div>
                     <div class="col-sm-4 p-0">
-                      <p>$19.54</p>
+                      <p>$<span id="subtotal">11.00</span></p>
                     </div>
                   </div>
                   <div class="row m-0">
@@ -157,7 +160,7 @@
                       <h6>Shipping</h6>
                     </div>
                     <div class="col-sm-4 p-0">
-                      <p>$10.00</p>
+                      <p>$5.00</p>
                     </div>
                   </div>
                   <div class="row m-0">
@@ -165,7 +168,7 @@
                       <h6>QST</h6>
                     </div>
                     <div class="col-sm-4 p-0">
-                      <p>$3.50</p>
+                      <p>$<span id="qst">1.1</span></p>
                     </div>
                   </div>
                   <div class="row m-0">
@@ -173,7 +176,7 @@
                       <h6>GST</h6>
                     </div>
                     <div class="col-sm-4 p-0">
-                      <p>$6.40</p>
+                      <p>$ <span id="gst">0.55</span></p>
                     </div>
                   </div>
                   <hr>
@@ -182,7 +185,7 @@
                       <h5 class="primary">Total</h5>
                     </div>
                     <div class="col-sm-4 p-0">
-                      <p>$29.44</p>
+                      <p>$ <span id="total">17.65</span></p>
                     </div>
                   </div>
                   <!--Checkout button-->
@@ -192,7 +195,8 @@
             </div>
             </div>
           </main>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+          <script src="/cart.js"></script>
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
 </html>
 
