--- a/html/Products/bakery/baguette.html
+++ b/html/Products/bakery/baguette.html
@@ -45,7 +45,7 @@
                             <a href="/html/ailes/dairy&eggs.html" class="nav-link lead">Dairy & Eggs</a>
                         </li>
                         <li class="nav-item px-4">
-                            <a href="/html/ailes/dairy&eggs.html" class="nav-link lead">Fruits & Vegetables</a>
+                            <a href="/html/ailes/fruits&vegetables.html" class="nav-link lead">Fruits & Vegetables</a>
                         </li>
                         <li class="nav-item px-4">
                             <a href="/html/ailes/snacks.html" class="nav-link lead">Snack</a>
